----------------------------------------------------------------------------

SimGrid (3.27.1) NOT RELEASED YET (v3.28 expected June 21. 2021, 03:32 UTC)

New features:
 - New plugin: Producer-Consumer with monitor. Just requires to include the
   include/simgrid/plugins/ProducerConsumer.hpp header to be used. See the
   associated example (examples/cpp/plugin-prodcons).

S4U:
 - Fixed a bug where Activity::wait_for() killed the activity on timeout.
   Explicitly cancel the activity to get back to previous behavior.

SMPI:
 - The default SMPI compiler flags are no more taken from the environment.
   They can be explicitly set through cmake parameters SMPI_C_FLAGS,
   SMPI_CXX_FLAGS, or SMPI_Fortran_FLAGS.
 - New options:
    --cfg=smpi/finalization-barrier: which can be used to add
      a barrier inside MPI_Finalize. This can help for some codes which cleanup
      data attached to a process, but still used in other SMPI processes.
    --cfg=smpi/errors-are-fatal: True by default, behaves like if MPI_ERRORS_RETURN
      is active when set to false, to keep going after a small error
    --cfg=smpi/pedantic: True by default. Do not report some harmless MPI errors
      which may or may not be problematic in the end.
  - Sampling:
    - fix behaviour, as maximum iteration count could be ignored
    - add SMPI_SAMPLE_LOCAL_TAG and SMPI_SAMPLE_GLOBAL_TAG macros, to allow user to
      use sampling when the same kernel is called with a different set of parameters
      which have an impact on the timing.
  - realloc is now intercepted, to be coherent, as malloc/calloc/free were already.
    It should now work with smpi/auto-shared-malloc-thresh.
  - Improve error handling and reporting in multiple places
  - Improve correctness checks on the MPI code.(MPI_Op and MPI_Datatype
    validity checks, truncated messages are now an error, return errors 
    when explicitely deleted handles are reused, ...)
  - RMA: multiple fixes and stability improvements.